# gstrokes-handwrite

./: .gitignore  CMakeLists.txt  README.md  todos.txt
src/: input.cpp  input.hpp  log.h  main.cpp  network.cpp  network.hpp  render.cpp  render.hpp  types.hpp
